[package]
name = "fips_203"
version = "0.1.0"
edition = "2021"

[lib]
name = "fips203"
path = "src/lib.rs"
[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
sha3 = {version="0.10.8", default-features=false}
rand = {version="0.9.0", features=["thread_rng"], optional=true}

[features]
default = ["std"]
std = ["rand"]

[dev-dependencies]
hex = "0.4.3"
serde_json = "1.0.138"