[package]
name = "fips_203"
version = "0.1.0"
edition = "2021"

[lib]
name = "fips203"
path = "src/lib.rs"

[dependencies]
sha3 = {version="0.10.8", default-features=false}
zeroize = {version="1.8.1", deafult-features=false, features=["derive"]}
rand = {version="0.9.0", features=["thread_rng"], optional=true}

[features]
default = ["std"]
std = ["rand"]

[package.metadata.docs.rs]
all-features = true